fixed class cards width issue

--- a/client/src/HomePage/HomePage.css
+++ b/client/src/HomePage/HomePage.css
@@ -59,6 +59,10 @@
   max-width: 550px;
 }
 
+.class-link {
+  width: 100%;
+
+}
 .class-item {
   display: flex;
   justify-content: space-between; /* Align name to the left and total to the right */
